Removed grading and submission cells from the exercises

--- a/CourseMaterial/MachineLearning/Exercises/Exercise2/exercise2.ipynb
+++ b/CourseMaterial/MachineLearning/Exercises/Exercise2/exercise2.ipynb
@@ -38,40 +38,8 @@
     "# library written for this exercise providing additional functions for assignment submission, and others\n",
     "import utils\n",
     "\n",
-    "# define the submission/grader object for this exercise\n",
-    "grader = utils.Grader()\n",
-    "\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Submission and Grading\n",
-    "\n",
-    "\n",
-    "After completing each part of the assignment, be sure to submit your solutions to the grader. The following is a breakdown of how each part of this exercise is scored.\n",
-    "\n",
-    "\n",
-    "| Section | Part                                 | Submission function   | Points \n",
-    "| :-      |:-                                    | :-                    | :-:\n",
-    "| 1       | [Sigmoid Function](#section1)                   | [`sigmoid`](#sigmoid) | 5      \n",
-    "| 2       | [Compute cost for logistic regression](#section2) | [`costFunction`](#costFunction) | 30     \n",
-    "| 3       | [Gradient for logistic regression](#section2)     | [`costFunction`](#costFunction) | 30     \n",
-    "| 4       | [Predict Function](#section4)                     | [`predict`](#predict) | 5      \n",
-    "| 5       | [Compute cost for regularized LR](#section5)      | [`costFunctionReg`](#costFunctionReg) | 15     \n",
-    "| 6       | [Gradient for regularized LR](#section5)          | [`costFunctionReg`](#costFunctionReg) | 15     \n",
-    "|         | Total Points                         | | 100    \n",
-    "\n",
-    "\n",
-    "\n",
-    "You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "At the end of each section in this notebook, we have a cell which contains code for submitting the solutions thus far to the grader. Execute the cell to see your score up to the current section. For all your work to be submitted properly, you must execute those cells at least once. They must also be re-executed everytime the submitted function is updated.\n",
-    "</div>\n"
    ]
   },
   {
@@ -264,32 +232,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After completing a part of the exercise, you can submit your solutions for grading by first adding the function you modified to the submission object, and then sending your function to Coursera for grading. \n",
-    "\n",
-    "The submission script will prompt you for your login e-mail and submission token. You can obtain a submission token from the web page for the assignment. You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "Execute the following cell to grade your solution to the first part of this exercise.\n",
-    "\n",
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# appends the implemented function in part 1 to the grader object\n",
-    "grader[1] = sigmoid\n",
-    "\n",
-    "# send the added functions to coursera grader for getting a grade on this part\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section2\"></a>\n",
     "#### 1.2.2 Cost function and gradient\n",
     "\n",
@@ -415,24 +357,6 @@
     "print('Gradient at test theta:')\n",
     "print('\\t[{:.3f}, {:.3f}, {:.3f}]'.format(*grad))\n",
     "print('Expected gradients (approx):\\n\\t[0.043, 2.566, 2.647]')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[2] = costFunction\n",
-    "grader[3] = costFunction\n",
-    "grader.grade()"
    ]
   },
   {
@@ -597,23 +521,6 @@
     "p = predict(theta, X)\n",
     "print('Train Accuracy: {:.2f} %'.format(np.mean(p == y) * 100))\n",
     "print('Expected accuracy (approx): 89.00 %')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[4] = predict\n",
-    "grader.grade()"
    ]
   },
   {
@@ -827,27 +734,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[5] = costFunctionReg\n",
-    "grader[6] = costFunctionReg\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 2.3.1 Learning parameters using `scipy.optimize.minimize`\n",
     "\n",
-    "Similar to the previous parts, you will use `optimize.minimize` to learn the optimal parameters $\\theta$. If you have completed the cost and gradient for regularized logistic regression (`costFunctionReg`) correctly, you should be able to step through the next part of to learn the parameters $\\theta$ using `optimize.minimize`."
+    "Similar to the previous parts, you will use `optimize.minimize` to learn the optimal parameters $\\theta$. If you have completed the cost and gradient for regularized logistic regression (`costFunctionReg`) correctly, you should be able to step through the next part of the exercise to learn the parameters $\\theta$ using `optimize.minimize`."
    ]
   },
   {
@@ -863,7 +752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5 Optional (ungraded) exercises\n",
+    "#### 2.4.1 Experiment with regularization parameters\n",
     "\n",
     "In this part of the exercise, you will get to try out different regularization parameters for the dataset to understand how regularization prevents overfitting.\n",
     "\n",
@@ -932,18 +821,11 @@
     "print('Train Accuracy: %.1f %%' % (np.mean(p == y) * 100))\n",
     "print('Expected accuracy (with lambda = 1): 83.1 % (approx)\\n')\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You do not need to submit any solutions for these optional (ungraded) exercises.*"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -957,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
