--- a/CourseMaterial/MachineLearning/Exercises/Exercise4/exercise4.ipynb
+++ b/CourseMaterial/MachineLearning/Exercises/Exercise4/exercise4.ipynb
@@ -40,38 +40,8 @@
     "# library written for this exercise providing additional functions for assignment submission, and others\n",
     "import utils\n",
     "\n",
-    "# define the submission/grader object for this exercise\n",
-    "grader = utils.Grader()\n",
-    "\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Submission and Grading\n",
-    "\n",
-    "\n",
-    "After completing each part of the assignment, be sure to submit your solutions to the grader. The following is a breakdown of how each part of this exercise is scored.\n",
-    "\n",
-    "\n",
-    "| Section | Part                                             | Submission function | Points \n",
-    "| :-      |:-                                                | :-                  | :-:    \n",
-    "| 1       | [Feedforward and Cost Function](#section1)                    | [`nnCostFunction`](#nnCostFunction)   | 30     \n",
-    "| 2       | [Regularized Cost Function](#section2)                        | [`nnCostFunction`](#nnCostFunction)   | 15     \n",
-    "| 3       | [Sigmoid Gradient](#section3)                                 | [`sigmoidGradient`](#sigmoidGradient) | 5      \n",
-    "| 4       | [Neural Net Gradient Function (Backpropagation)](#section4)   | [`nnCostFunction`](#nnCostFunction)   | 40     \n",
-    "| 5       | [Regularized Gradient](#section5)                             | [`nnCostFunction`](#nnCostFunction)   |10     \n",
-    "|         | Total Points                                     |    | 100    \n",
-    "\n",
-    "\n",
-    "You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "At the end of each section in this notebook, we have a cell which contains code for submitting the solutions thus far to the grader. Execute the cell to see your score up to the current section. For all your work to be submitted properly, you must execute those cells at least once.\n",
-    "</div>"
    ]
   },
   {
@@ -366,24 +336,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader = utils.Grader()\n",
-    "grader[1] = nnCostFunction\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section2\"></a>\n",
     "### 1.4 Regularized cost function\n",
     "\n",
@@ -418,23 +370,6 @@
     "\n",
     "print('Cost at parameters (loaded from ex4weights): %.6f' % J)\n",
     "print('This value should be about                 : 0.383770.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[2] = nnCostFunction\n",
-    "grader.grade()"
    ]
   },
   {
@@ -529,23 +464,6 @@
     "g = sigmoidGradient(z)\n",
     "print('Sigmoid gradient evaluated at [-1 -0.5 0 0.5 1]:\\n  ')\n",
     "print(g)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[3] = sigmoidGradient\n",
-    "grader.grade()"
    ]
   },
   {
@@ -727,23 +645,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Once your cost function passes the gradient check for the (unregularized) neural network cost function, you should submit the neural network gradient function (backpropagation).*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[4] = nnCostFunction\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section5\"></a>\n",
     "### 2.5 Regularized Neural Network\n",
     "\n",
@@ -788,16 +689,6 @@
     "\n",
     "print('\\n\\nCost at (fixed) debugging parameters (w/ lambda = %f): %f ' % (lambda_, debug_J))\n",
     "print('(for lambda = 3, this value should be about 0.576051)')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[5] = nnCostFunction\n",
-    "grader.grade()"
    ]
   },
   {
@@ -894,15 +785,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Optional (ungraded) exercise\n",
+    "### See the effect of the hyperparameters\n",
     "\n",
-    "In this part of the exercise, you will get to try out different learning settings for the neural network to see how the performance of the neural network varies with the regularization parameter $\\lambda$ and number of training steps (the `maxiter` option when using `scipy.optimize.minimize`). Neural networks are very powerful models that can form highly complex decision boundaries. Without regularization, it is possible for a neural network to “overfit” a training set so that it obtains close to 100% accuracy on the training set but does not as well on new examples that it has not seen before. You can set the regularization $\\lambda$ to a smaller value and the `maxiter` parameter to a higher number of iterations to see this for youself."
+    "In this part of the exercise, you will get to try out different learning settings for the neural network to see how the performance of the neural network varies with the regularization parameter $\\lambda$ and number of training steps (the `maxiter` option when using `scipy.optimize.minimize`). Neural networks are very powerful models that can form highly complex decision boundaries. Without regularization, it is possible for a neural network to “overfit” a training set so that it obtains close to 100% accuracy on the training set but does not as well on new examples that it has not seen before. Go back and set the regularization $\\lambda$ to a smaller value and the `maxiter` parameter to a higher number of iterations, and then re-run the cells to see this for youself."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -916,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
