--- a/CourseMaterial/MachineLearning/Exercises/Exercise5/exercise5.ipynb
+++ b/CourseMaterial/MachineLearning/Exercises/Exercise5/exercise5.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# used for manipulating directory paths\n",
@@ -39,41 +37,11 @@
     "# will be used to load MATLAB mat datafile format\n",
     "from scipy.io import loadmat\n",
     "\n",
-    "# library written for this exercise providing additional functions for assignment submission, and others\n",
+    "# library written for this exercise providing additional functions\n",
     "import utils\n",
-    "\n",
-    "# define the submission/grader object for this exercise\n",
-    "grader = utils.Grader()\n",
     "\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Submission and Grading\n",
-    "\n",
-    "\n",
-    "After completing each part of the assignment, be sure to submit your solutions to the grader. The following is a breakdown of how each part of this exercise is scored.\n",
-    "\n",
-    "\n",
-    "| Section | Part                                             | Submitted Function                | Points |\n",
-    "| :-      |:-                                                |:-                                 | :-:    |\n",
-    "| 1       | [Regularized Linear Regression Cost Function](#section1)      | [`linearRegCostFunction`](#linearRegCostFunction) |  25    |\n",
-    "| 2       | [Regularized Linear Regression Gradient](#section2)           | [`linearRegCostFunction`](#linearRegCostFunction) |25      |\n",
-    "| 3       | [Learning Curve](#section3)                                   | [`learningCurve`](#func2)         | 20     |\n",
-    "| 4       | [Polynomial Feature Mapping](#section4)                       | [`polyFeatures`](#polyFeatures)          | 10     |\n",
-    "| 5       | [Cross Validation Curve](#section5)                           | [`validationCurve`](#validationCurve)       | 20     |\n",
-    "|         | Total Points                                     |                                   |100     |\n",
-    "\n",
-    "\n",
-    "You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "At the end of each section in this notebook, we have a cell which contains code for submitting the solutions thus far to the grader. Execute the cell to see your score up to the current section. For all your work to be submitted properly, you must execute those cells at least once.\n",
-    "</div>"
    ]
   },
   {
@@ -141,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def linearRegCostFunction(X, y, theta, lambda_=0.0):\n",
@@ -223,27 +189,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After completing a part of the exercise, you can submit your solutions for grading by first adding the function you modified to the submission object, and then sending your function to Coursera for grading. \n",
-    "\n",
-    "The submission script will prompt you for your login e-mail and submission token. You can obtain a submission token from the web page for the assignment. You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "*Execute the following cell to grade your solution to the first part of this exercise.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[1] = linearRegCostFunction\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section2\"></a>\n",
     "### 1.3 Regularized linear regression gradient\n",
     "\n",
@@ -273,23 +218,6 @@
     "\n",
     "print('Gradient at theta = [1, 1]:  [{:.6f}, {:.6f}] '.format(*grad))\n",
     "print(' (this value should be about [-15.303016, 598.250744])\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[2] = linearRegCostFunction\n",
-    "grader.grade()"
    ]
   },
   {
@@ -359,9 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def learningCurve(X, y, Xval, yval, lambda_=0):\n",
@@ -486,23 +412,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[3] = learningCurve\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section4\"></a>\n",
     "\n",
     "## 3 Polynomial regression\n",
@@ -528,9 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def polyFeatures(X, p):\n",
@@ -609,23 +516,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[4] = polyFeatures\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 3.1 Learning Polynomial Regression\n",
     "\n",
     "After you have completed the function `polyFeatures`, we will proceed to train polynomial regression using your linear regression cost function.\n",
@@ -693,7 +583,7 @@
    "source": [
     "One way to combat the overfitting (high-variance) problem is to add regularization to the model. In the next section, you will get to  try different $\\lambda$ parameters to see how regularization can lead to a better model.\n",
     "\n",
-    "### 3.2 Optional (ungraded) exercise: Adjusting the regularization parameter\n",
+    "### Adjusting the regularization parameter\n",
     "\n",
     "In this section, you will get to observe how the regularization parameter affects the bias-variance of regularized polynomial regression. You should now modify the the lambda parameter and try $\\lambda = 1, 100$. For each of these values, the script should generate a polynomial fit to the data and also a learning curve.\n",
     "\n",
@@ -708,9 +598,7 @@
     "\n",
     "For $\\lambda = 100$, you should see a polynomial fit (figure below) that does not follow the data well. In this case, there is too much regularization and the model is unable to fit the training data.\n",
     "\n",
-    "![](Figures/polynomial_regression_reg_100.png)\n",
-    "\n",
-    "*You do not need to submit any solutions for this optional (ungraded) exercise.*"
+    "![](Figures/polynomial_regression_reg_100.png)"
    ]
   },
   {
@@ -732,9 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def validationCurve(X, y, Xval, yval):\n",
@@ -845,28 +731,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[5] = validationCurve\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3.4  Optional (ungraded) exercise: Computing test set error\n",
     "\n",
-    "In the previous part of the exercise, you implemented code to compute the cross validation error for various values of the regularization parameter $\\lambda$. However, to get a better indication of the model’s performance in the real world, it is important to evaluate the “final” model on a test set that was not used in any part of training (that is, it was neither used to select the $\\lambda$ parameters, nor to learn the model parameters $\\theta$). For this optional (ungraded) exercise, you should compute the test error using the best value of $\\lambda$ you found. In our cross validation, we obtained a test error of 3.8599 for $\\lambda = 3$.\n",
-    "\n",
-    "*You do not need to submit any solutions for this optional (ungraded) exercise.*"
+    "In the previous part of the exercise, you implemented code to compute the cross validation error for various values of the regularization parameter $\\lambda$. However, to get a better indication of the model’s performance in the real world, it is important to evaluate the “final” model on a test set that was not used in any part of training (that is, it was neither used to select the $\\lambda$ parameters, nor to learn the model parameters $\\theta$). For this optional (ungraded) exercise, you should compute the test error using the best value of $\\lambda$ you found. In our cross validation, we obtained a test error of 3.8599 for $\\lambda = 3$."
    ]
   },
   {
@@ -888,24 +755,20 @@
     "\n",
     "For this optional (ungraded) exercise, you should implement the above strategy for computing the learning curves. For reference, the figure below  shows the learning curve we obtained for polynomial regression with $\\lambda = 0.01$. Your figure may differ slightly due to the random selection of examples.\n",
     "\n",
-    "![](Figures/learning_curve_random.png)\n",
-    "\n",
-    "*You do not need to submit any solutions for this optional (ungraded) exercise.*"
+    "![](Figures/learning_curve_random.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -919,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
