--- a/CourseMaterial/MachineLearning/Exercises/Exercise1/exercise1.ipynb
+++ b/CourseMaterial/MachineLearning/Exercises/Exercise1/exercise1.ipynb
@@ -33,12 +33,6 @@
     "from matplotlib import pyplot\n",
     "from mpl_toolkits.mplot3d import Axes3D  # needed to plot 3-D surfaces\n",
     "\n",
-    "# library written for this exercise providing additional functions for assignment submission, and others\n",
-    "import utils \n",
-    "\n",
-    "# define the submission/grader object for this exercise\n",
-    "grader = utils.Grader()\n",
-    "\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
    ]
@@ -47,37 +41,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Submission and Grading\n",
-    "\n",
-    "After completing each part of the assignment, be sure to submit your solutions to the grader.\n",
-    "\n",
-    "For this programming exercise, you are only required to complete the first part of the exercise to implement linear regression with one variable. The second part of the exercise, which is optional, covers linear regression with multiple variables. The following is a breakdown of how each part of this exercise is scored.\n",
-    "\n",
-    "**Required Exercises**\n",
-    "\n",
-    "| Section | Part                                           |Submitted Function                     | Points \n",
-    "|---------|:-                                             |:-                                     | :-:    \n",
-    "| 1       | [Warm up exercise](#section1)                  | [`warmUpExercise`](#warmUpExercise)    |  10    \n",
-    "| 2       | [Compute cost for one variable](#section2)     | [`computeCost`](#computeCost)         |  40    \n",
-    "| 3       | [Gradient descent for one variable](#section3) | [`gradientDescent`](#gradientDescent) |  50    \n",
-    "|         | Total Points                                   |                                       | 100    \n",
-    "\n",
-    "**Optional Exercises**\n",
-    "\n",
-    "| Section | Part                                                 | Submitted Function | Points |\n",
-    "|:-------:|:-                                                    |:-:                  | :-:    |\n",
-    "| 4       | [Feature normalization](#section4)                   | [`featureNormalize`](#featureNormalize) | 0      |\n",
-    "| 5       | [Compute cost for multiple variables](#section5)     | [`computeCostMulti`](#computeCostMulti) | 0      |\n",
-    "| 6       | [Gradient descent for multiple variables](#section5) | [`gradientDescentMulti`](#gradientDescentMulti) |0      |\n",
-    "| 7       | [Normal Equations](#section7)                        | [`normalEqn`](#normalEqn)        | 0      |\n",
-    "\n",
-    "You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "At the end of each section in this notebook, we have a cell which contains code for submitting the solutions thus far to the grader. Execute the cell to see your score up to the current section. For all your work to be submitted properly, you must execute those cells at least once. They must also be re-executed everytime the submitted function is updated.\n",
-    "</div>\n",
-    "\n",
-    "\n",
     "## Debugging\n",
     "\n",
     "Here are some things to keep in mind throughout this exercise:\n",
@@ -154,34 +117,6 @@
    "outputs": [],
    "source": [
     "warmUpExercise()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.1 Submitting solutions\n",
-    "\n",
-    "After completing a part of the exercise, you can submit your solutions for grading by first adding the function you modified to the grader object, and then sending your function to Coursera for grading. \n",
-    "\n",
-    "The grader will prompt you for your login e-mail and submission token. You can obtain a submission token from the web page for the assignment. You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "Execute the next cell to grade your solution to the first part of this exercise.\n",
-    "\n",
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# appends the implemented function in part 1 to the grader object\n",
-    "grader[1] = warmUpExercise\n",
-    "\n",
-    "# send the added functions to coursera grader for getting a grade on this part\n",
-    "grader.grade()"
    ]
   },
   {
@@ -452,23 +387,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions by executing the following cell.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[2] = computeCost\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section3\"></a>\n",
     "#### 2.2.4 Gradient descent\n",
     "\n",
@@ -630,23 +548,6 @@
     "\n",
     "predict2 = np.dot([1, 7], theta)\n",
     "print('For population = 70,000, we predict a profit of {:.2f}\\n'.format(predict2*10000))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions by executing the next cell.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[3] = gradientDescent\n",
-    "grader.grade()"
    ]
   },
   {
@@ -845,23 +746,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should not submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[4] = featureNormalize\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "After the `featureNormalize` function is tested, we now add the intercept term to `X_norm`:"
    ]
   },
@@ -958,23 +842,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[5] = computeCostMulti\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"gradientDescentMulti\"></a>"
    ]
   },
@@ -1045,24 +912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[6] = gradientDescentMulti\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3.2.1 Optional (ungraded) exercise: Selecting learning rates\n",
+    "#### 3.2.1 Selecting learning rates\n",
     "\n",
     "In this part of the exercise, you will get to try out different learning rates for the dataset and find a learning rate that converges quickly. You can change the learning rate by modifying the following code and changing the part of the code that sets the learning rate.\n",
     "\n",
@@ -1150,13 +1000,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You do not need to submit any solutions for this optional (ungraded) part.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section7\"></a>\n",
     "### 3.3 Normal Equations\n",
     "\n",
@@ -1237,24 +1080,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[7] = normalEqn\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Optional (ungraded) exercise: Now, once you have found $\\theta$ using this\n",
+    "Now, once you have found $\\theta$ using this\n",
     "method, use it to make a price prediction for a 1650-square-foot house with\n",
     "3 bedrooms. You should find that gives the same predicted price as the value\n",
     "you obtained using the model fit with gradient descent (in Section 3.2.1)."
@@ -1285,7 +1111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1299,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
