--- a/CourseMaterial/MachineLearning/Exercises/Exercise3/exercise3.ipynb
+++ b/CourseMaterial/MachineLearning/Exercises/Exercise3/exercise3.ipynb
@@ -41,37 +41,8 @@
     "# library written for this exercise providing additional functions for assignment submission, and others\n",
     "import utils\n",
     "\n",
-    "# define the submission/grader object for this exercise\n",
-    "grader = utils.Grader()\n",
-    "\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Submission and Grading\n",
-    "\n",
-    "\n",
-    "After completing each part of the assignment, be sure to submit your solutions to the grader. The following is a breakdown of how each part of this exercise is scored.\n",
-    "\n",
-    "\n",
-    "| Section | Part                                 | Submission function                   |  Points \n",
-    "| :-      |:-                                    | :-                                    |  :-:    \n",
-    "| 1       | [Regularized Logistic Regression](#section1)     | [`lrCostFunction`](#lrCostFunction)   | 30     \n",
-    "| 2       | [One-vs-all classifier training](#section2)       | [`oneVsAll`](#oneVsAll)               | 20     \n",
-    "| 3       | [One-vs-all classifier prediction](#section3)     | [`predictOneVsAll`](#predictOneVsAll) | 20     \n",
-    "| 4       | [Neural Network Prediction Function](#section4)   | [`predict`](#predict)           | 30\n",
-    "|         | Total Points                         |                                 | 100    \n",
-    "\n",
-    "\n",
-    "You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "At the end of each section in this notebook, we have a cell which contains code for submitting the solutions thus far to the grader. Execute the cell to see your score up to the current section. For all your work to be submitted properly, you must execute those cells at least once. They must also be re-executed everytime the submitted function is updated.\n",
-    "</div>"
    ]
   },
   {
@@ -408,30 +379,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After completing a part of the exercise, you can submit your solutions for grading by first adding the function you modified to the submission object, and then sending your function to Coursera for grading. \n",
-    "\n",
-    "The submission script will prompt you for your login e-mail and submission token. You can obtain a submission token from the web page for the assignment. You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "*Execute the following cell to grade your solution to the first part of this exercise.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# appends the implemented function in part 1 to the grader object\n",
-    "grader[1] = lrCostFunction\n",
-    "\n",
-    "# send the added functions to coursera grader for getting a grade on this part\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section2\"></a>\n",
     "### 1.4 One-vs-all Classification\n",
     "\n",
@@ -554,23 +501,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[2] = oneVsAll\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section3\"></a>\n",
     "#### 1.4.1 One-vs-all Prediction\n",
     "\n",
@@ -656,23 +586,6 @@
    "source": [
     "pred = predictOneVsAll(all_theta, X)\n",
     "print('Training Set Accuracy: {:.2f}%'.format(np.mean(pred == y) * 100))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[3] = predictOneVsAll\n",
-    "grader.grade()"
    ]
   },
   {
@@ -880,28 +793,11 @@
     "else:\n",
     "    print('No more images to display!')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[4] = predict\n",
-    "grader.grade()"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -915,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
