--- a/CourseMaterial/MachineLearning/Exercises/Exercise7/exercise7.ipynb
+++ b/CourseMaterial/MachineLearning/Exercises/Exercise7/exercise7.ipynb
@@ -55,38 +55,8 @@
     "%load_ext autoreload \n",
     "%autoreload 2\n",
     "\n",
-    "# define the submission/grader object for this exercise\n",
-    "grader = utils.Grader()\n",
-    "\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Submission and Grading\n",
-    "\n",
-    "\n",
-    "After completing each part of the assignment, be sure to submit your solutions to the grader. The following is a breakdown of how each part of this exercise is scored.\n",
-    "\n",
-    "\n",
-    "| Section | Part                                             | Submitted Function                | Points |\n",
-    "| :-      |:-                                                |:-                                 | :-:    |\n",
-    "| 1       | [Find Closest Centroids](#section1)              | [`findClosestCentroids`](#findClosestCentroids)  |  30    |\n",
-    "| 2       | [Computed Centroid Means](#section2)             | [`computeCentroids`](#computeCentroids)      |  30    |\n",
-    "| 3       | [PCA](#section3)                                 | [`pca`](#pca)                   |  20    |\n",
-    "| 4       | [Project Data](#section4)                        | [`projectData`](#projectData)           |  10    |\n",
-    "| 5       | [Recover Data](#section5)                        | [`recoverData`](#recoverData)           |  10    |\n",
-    "|         | Total Points                                     |                                   |100     |\n",
-    "\n",
-    "\n",
-    "You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "At the end of each section in this notebook, we have a cell which contains code for submitting the solutions thus far to the grader. Execute the cell to see your score up to the current section. For all your work to be submitted properly, you must execute those cells at least once.\n",
-    "</div>"
    ]
   },
   {
@@ -225,23 +195,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[1] = findClosestCentroids\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section2\"></a>\n",
     "### 1.1.2 Computing centroid means\n",
     "\n",
@@ -339,23 +292,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[2] = computeCentroids\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 1.2 K-means on example dataset \n",
     "\n",
     "After you have completed the two functions (`findClosestCentroids` and `computeCentroids`), you have all the necessary pieces to run the K-means algorithm. The next cell  will run the K-means algorithm on a toy 2D dataset to help you understand how K-means works. Your functions are called from inside the `runKmeans` function (in this assignment's `utils.py` module). We encourage you to take a look at the function to understand how it works. Notice that the code calls the two functions you implemented in a loop.\n",
@@ -414,10 +350,7 @@
     "centroids = X[randidx[:K], :]\n",
     "```\n",
     "\n",
-    "The code above first randomly permutes the indices of the examples (using `permute` within the `numpy.random` module). Then, it selects the first $K$ examples based on the random permutation of the indices. This allows the examples to be selected at random without the risk of selecting the same example twice.\n",
-    "\n",
-    "*You do not need to make any submission for this part of the exercise*\n",
-    "<a id=\"kMeansInitCentroids\"></a>"
+    "The code above first randomly permutes the indices of the examples (using `permute` within the `numpy.random` module). Then, it selects the first $K$ examples based on the random permutation of the indices. This allows the examples to be selected at random without the risk of selecting the same example twice."
    ]
   },
   {
@@ -550,13 +483,6 @@
     "ax[1].imshow(X_recovered*255)\n",
     "ax[1].set_title('Compressed, with %d colors' % K)\n",
     "ax[1].grid(False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You do not need to make any submissions for this part of the exercise.*"
    ]
   },
   {
@@ -730,23 +656,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[3] = pca\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 2.3 Dimensionality Reduction with PCA\n",
     "\n",
     "After computing the principal components, you can use them to reduce the feature dimension of your dataset by projecting each example onto a lower dimensional space, $x^{(i)} \\rightarrow z^{(i)}$ (e.g., projecting the data from 2D to 1D). In this part of the exercise, you will use the eigenvectors returned by PCA and\n",
@@ -832,23 +741,6 @@
     "Z = projectData(X_norm, U, K)\n",
     "print('Projection of the first example: {:.6f}'.format(Z[0, 0]))\n",
     "print('(this value should be about    : 1.481274)')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[4] = projectData\n",
-    "grader.grade()"
    ]
   },
   {
@@ -951,23 +843,6 @@
     "ax.plot(X_rec[:, 0], X_rec[:, 1], 'ro', mec='r', mew=2, mfc='none')\n",
     "for xnorm, xrec in zip(X_norm, X_rec):\n",
     "    ax.plot([xnorm[0], xrec[0]], [xnorm[1], xrec[1]], '--k', lw=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[5] = recoverData\n",
-    "grader.grade()"
    ]
   },
   {
@@ -1172,7 +1047,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1186,7 +1061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
