--- a/CourseMaterial/MachineLearning/Exercises/Exercise4/exercise4.ipynb
+++ b/CourseMaterial/MachineLearning/Exercises/Exercise4/exercise4.ipynb
@@ -11,7 +11,7 @@
     "In this exercise, you will implement the backpropagation algorithm for neural networks and apply it to the task of hand-written digit recognition. Before starting on the programming exercise, we strongly recommend watching the video lectures and completing the review questions for the associated topics.\n",
     "\n",
     "\n",
-    "All the information you need for solving this assignment is in this notebook, and all the code you will be implementing will take place within this notebook. \n",
+    "All the information you need for solving this assignment is in this notebook, and all the code you will be implementing will take place within this notebook.\n",
     "\n",
     "Before we begin with the exercises, we need to import all libraries required for this programming exercise. Throughout the course, we will be using [`numpy`](http://www.numpy.org/) for all arrays and matrix operations, [`matplotlib`](https://matplotlib.org/) for plotting, and [`scipy`](https://docs.scipy.org/doc/scipy/reference/) for scientific and numerical computation functions and tools. You can find instructions on how to install required libraries in the README file in the [github repository](https://github.com/dibgerge/ml-coursera-python-assignments)."
    ]
@@ -189,6 +189,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def sigmoidGradient(z):\n",
+    "    \"\"\"\n",
+    "    Computes the gradient of the sigmoid function evaluated at z. \n",
+    "    This should work regardless if z is a matrix or a vector. \n",
+    "    In particular, if z is a vector or matrix, you should return\n",
+    "    the gradient for each element.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    z : array_like\n",
+    "        A vector or matrix as input to the sigmoid function. \n",
+    "    \n",
+    "    Returns\n",
+    "    --------\n",
+    "    g : array_like\n",
+    "        Gradient of the sigmoid function. Has the same shape as z. \n",
+    "    \n",
+    "    Instructions\n",
+    "    ------------\n",
+    "    Compute the gradient of the sigmoid function evaluated at\n",
+    "    each value of z (z can be a matrix, vector or scalar).\n",
+    "    \n",
+    "    Note\n",
+    "    ----\n",
+    "    We have provided an implementation of the sigmoid function \n",
+    "    in `utils.py` file accompanying this assignment.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # ====================== YOUR CODE HERE ======================\n",
+    "    \"\"\"\n",
+    "    Part 2.1: Sigmoid Gradient\n",
+    "    \"\"\"\n",
+    "    # NOTE: Do not implement this until part 2.1 of the exercise \n",
+    "    #       (i.e. skip this for now if you are implementing forward pass)\n",
+    "    \n",
+    "    \n",
+    "    # =============================================================    \n",
+    "    return g\n",
+    "\n",
     "def nnCostFunction(nn_params,\n",
     "                   input_layer_size,\n",
     "                   hidden_layer_size,\n",
@@ -272,10 +311,10 @@
     "    # Reshape nn_params back into the parameters Theta1 and Theta2, the weight matrices\n",
     "    # for our 2 layer neural network\n",
     "    Theta1 = np.reshape(nn_params[:hidden_layer_size * (input_layer_size + 1)],\n",
-    "                        (hidden_layer_size, (input_layer_size + 1)))\n",
+    "                       (hidden_layer_size, (input_layer_size + 1)))\n",
     "\n",
     "    Theta2 = np.reshape(nn_params[(hidden_layer_size * (input_layer_size + 1)):],\n",
-    "                        (num_labels, (hidden_layer_size + 1)))\n",
+    "                       (num_labels, (hidden_layer_size + 1)))\n",
     "\n",
     "    # Setup some useful variables\n",
     "    m = y.size\n",
@@ -287,12 +326,29 @@
     "\n",
     "    # ====================== YOUR CODE HERE ======================\n",
     "\n",
+    "    \"\"\"\n",
+    "    Part 1.3: Feedforward and cost function\n",
+    "    \"\"\"\n",
+    "        \n",
+    "        \n",
+    "    \"\"\"\n",
+    "    Part 1.4: Regularized cost function\n",
+    "    \"\"\"\n",
+    "        \n",
     "    \n",
+    "    \"\"\"\n",
+    "    Part 2.4: Backpropagation\n",
+    "    \"\"\"\n",
+    "        \n",
     "    \n",
+    "    \"\"\"\n",
+    "    Part 2.5: Backpropagation with regularization\n",
+    "    \"\"\"    \n",
+    "            \n",
     "    # ================================================================\n",
     "    # Unroll gradients\n",
     "    # grad = np.concatenate([Theta1_grad.ravel(order=order), Theta2_grad.ravel(order=order)])\n",
-    "    grad = np.concatenate([Theta1_grad.ravel(), Theta2_grad.ravel()])\n",
+    "    grad = np.concatenate([Theta1_grad.ravel(), Theta2_grad.ravel()])    \n",
     "\n",
     "    return J, grad"
    ]
@@ -399,52 +455,8 @@
     "\n",
     "$$ \\text{sigmoid}(z) = g(z) = \\frac{1}{1 + e^{-z}} $$\n",
     "\n",
-    "Now complete the implementation of `sigmoidGradient` in the next cell.\n",
+    "Now [go back to `nnCostFunction`](#nnCostFunction) and complete the implementation of `sigmoidGradient`.\n",
     "<a id=\"sigmoidGradient\"></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sigmoidGradient(z):\n",
-    "    \"\"\"\n",
-    "    Computes the gradient of the sigmoid function evaluated at z. \n",
-    "    This should work regardless if z is a matrix or a vector. \n",
-    "    In particular, if z is a vector or matrix, you should return\n",
-    "    the gradient for each element.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    z : array_like\n",
-    "        A vector or matrix as input to the sigmoid function. \n",
-    "    \n",
-    "    Returns\n",
-    "    --------\n",
-    "    g : array_like\n",
-    "        Gradient of the sigmoid function. Has the same shape as z. \n",
-    "    \n",
-    "    Instructions\n",
-    "    ------------\n",
-    "    Compute the gradient of the sigmoid function evaluated at\n",
-    "    each value of z (z can be a matrix, vector or scalar).\n",
-    "    \n",
-    "    Note\n",
-    "    ----\n",
-    "    We have provided an implementation of the sigmoid function \n",
-    "    in `utils.py` file accompanying this assignment.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    g = np.zeros(z.shape)\n",
-    "\n",
-    "    # ====================== YOUR CODE HERE ======================\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # =============================================================\n",
-    "    return g"
    ]
   },
   {
@@ -528,7 +540,8 @@
     "\n",
     "    # ====================== YOUR CODE HERE ======================\n",
     "\n",
-    "\n",
+    "    \n",
+    "    \n",
     "\n",
     "    # ============================================================\n",
     "    return W"
@@ -786,6 +799,58 @@
     "### See the effect of the hyperparameters\n",
     "\n",
     "In this part of the exercise, you will get to try out different learning settings for the neural network to see how the performance of the neural network varies with the regularization parameter $\\lambda$ and number of training steps (the `maxiter` option when using `scipy.optimize.minimize`). Neural networks are very powerful models that can form highly complex decision boundaries. Without regularization, it is possible for a neural network to “overfit” a training set so that it obtains close to 100% accuracy on the training set but does not as well on new examples that it has not seen before. Go back and set the regularization $\\lambda$ to a smaller value and the `maxiter` parameter to a higher number of iterations, and then re-run the cells to see this for youself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do hyperparameter optimization by testing different ranges of maxiter and labmda_\n",
+    "\n",
+    "# ====================== YOUR CODE HERE ======================\n",
+    "\n",
+    "# Fill in more values you find interesting and investigate the results\n",
+    "maxiter_range = [10, 50]\n",
+    "lambda_range = [0, 0.1]\n",
+    "            \n",
+    "# ============================================================\n",
+    "\n",
+    "for i in range(np.size(maxiter_range)):\n",
+    "    for j in range(np.size(lambda_range)):\n",
+    "        print(\"-----------------------------------\")\n",
+    "        print(\"Lambda value is \" + str(lambda_range[j]) + \" and maxiter is \" + str(maxiter_range[i]))\n",
+    "        options= {'maxiter': maxiter_range[i]}\n",
+    "\n",
+    "        #  You should also try different values of lambda\n",
+    "        lambda_ = lambda_range[j]\n",
+    "\n",
+    "        # Create \"short hand\" for the cost function to be minimized\n",
+    "        costFunction = lambda p: nnCostFunction(p, input_layer_size,\n",
+    "                                                hidden_layer_size,\n",
+    "                                                num_labels, X, y, lambda_)\n",
+    "\n",
+    "        # Now, costFunction is a function that takes in only one argument\n",
+    "        # (the neural network parameters)\n",
+    "        res = optimize.minimize(costFunction,\n",
+    "                                initial_nn_params,\n",
+    "                                jac=True,\n",
+    "                                method='TNC',\n",
+    "                                options=options)\n",
+    "\n",
+    "        # get the solution of the optimization\n",
+    "        nn_params = res.x\n",
+    "\n",
+    "        # Obtain Theta1 and Theta2 back from nn_params\n",
+    "        Theta1 = np.reshape(nn_params[:hidden_layer_size * (input_layer_size + 1)],\n",
+    "                            (hidden_layer_size, (input_layer_size + 1)))\n",
+    "\n",
+    "        Theta2 = np.reshape(nn_params[(hidden_layer_size * (input_layer_size + 1)):],\n",
+    "                            (num_labels, (hidden_layer_size + 1)))\n",
+    "\n",
+    "        pred = utils.predict(Theta1, Theta2, X)\n",
+    "        print('Training Set Accuracy: %f' % (np.mean(pred == y) * 100))"
    ]
   }
  ],
